--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,15 @@ dist.jlink.output=${dist.jlink.dir}/Airport
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-demo-3.6.jar=lib\\flatlaf-demo-3.6.jar
+file.reference.gson-2.10.1.jar=C:\\Users\\Usuario\\Downloads\\gson-2.10.1.jar
 file.reference.json-20250107.jar=lib\\json-20250107.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.flatlaf-demo-3.6.jar}:\
-    ${file.reference.json-20250107.jar}
+    ${file.reference.json-20250107.jar}:\
+    ${file.reference.gson-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
