json en proceso

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,9 @@ endorsed.classpath=
 excludes=
 file.reference.flatlaf-demo-3.6.jar=lib\\flatlaf-demo-3.6.jar
 file.reference.gson-2.10.1.jar=C:\\Users\\Usuario\\Downloads\\gson-2.10.1.jar
+file.reference.jackson-core-2.15.2-javadoc.jar=C:\\Users\\Usuario\\Downloads\\jackson-core-2.15.2-javadoc.jar
+file.reference.jackson-databind-2.15.2-javadoc.jar=C:\\Users\\Usuario\\Downloads\\jackson-databind-2.15.2-javadoc.jar
+file.reference.jackson-datatype-jsr310-2.15.2-javadoc.jar=C:\\Users\\Usuario\\Downloads\\jackson-datatype-jsr310-2.15.2-javadoc.jar
 file.reference.json-20250107.jar=lib\\json-20250107.jar
 includes=**
 jar.compress=false
@@ -44,7 +47,10 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.flatlaf-demo-3.6.jar}:\
     ${file.reference.json-20250107.jar}:\
-    ${file.reference.gson-2.10.1.jar}
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.jackson-core-2.15.2-javadoc.jar}:\
+    ${file.reference.jackson-databind-2.15.2-javadoc.jar}:\
+    ${file.reference.jackson-datatype-jsr310-2.15.2-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
