Prototype pattern implemented and Load Data is corrected

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.jackson-databind-2.15.2-javadoc.jar=C:\\Users\\ASUS\\Desktop\\Airport\\lib\\json-20250107.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
